# plan-for-optimal-fix-configuration

./: README.md  autonomous fix demo.py  collision_utils.py  combineURDF.py  config_generalization.py  demo.py  get_ik.py  help_func.py
assets/ur5/: camera.urdf  robot_movable_table.urdf  robot_optical_table_hong.urdf  robot_optical_table_kong.urdf  soft_hybrid_gripper_URDF.urdf  soft_hybrid_gripper_URDF_kong.urdf  ssff.urdf  ur10.urdf  ur10_hong_gripper.urdf  ur10_hong_gripper_cam.urdf  ur10_kong.urdf  ur10_kong_gripper.urdf
assets/ur5/collision/: base_link_cam.STL  camera.STL
assets/ur5/hybrid_griper_v3/urdf/: hybrid_griper_v3.urdf
assets/ur5/hybrid_gripper_cam/: CMakeLists.txt  package.xml
assets/ur5/hybrid_gripper_cam/config/: joint_names_soft hybrid gripper urdf.yaml
assets/ur5/hybrid_gripper_cam/launch/: display.launch  gazebo.launch
assets/ur5/hybrid_gripper_cam/meshes/: rigid_link.STL  rigid_tip_link.STL  soft_tip_link.STL
assets/ur5/hybrid_gripper_cam/urdf/: soft hybrid gripper urdf.csv  soft hybrid gripper urdf.urdf
assets/ur5/liwei_ur_description/urdf/: ur10.urdf  ur10_hong_gripper.urdf  ur10_kong.urdf  ur10_kong_gripper.urdf  ur10_robot.urdf.xacro
assets/ur5/lw_ur_description/: CMakeLists.txt  package.xml
assets/ur5/lw_ur_description/urdf/: ur10_robot.urdf.xacro
assets/ur5/rigid_fixture/meshes/: base_link.STL  base_link1.STL  bottom_Link.STL  camera_link.STL  tip_link.STL
assets/ur5/rigid_fixture/urdf/: rigid_fixture.csv  rigid_fixture.urdf
